# a2a

./: .gitignore  .python-version  README.md  TODO.md  mkdocs.yml  pyproject.toml  requirements.txt
app/: __init__.py  dashboard.py  db.py  main.py  models.py  schemas.py  sdk.py  security.py
app/services/: a2a_ledger_artifact.json  ledger.py  ledger_backend.py  verifier.py
app/static/dashboard/: app.js  index.html  styles.css
contracts/: A2ALedger.sol
docs/: API.md  ARCHITECTURE.md  DASHBOARD.md  LEDGER_MODES.md  QUICKSTART.md  SDK.md  index.md
examples/: __init__.py  agent_apps.py  buyer.py  echo_seller.py  seller.py
tests/integration/: test_api_errors.py  test_api_flow.py  test_dashboard_ui.py  test_examples_flow.py  test_ledger_modes.py  test_ledger_modes_rpc.py
tests/unit/: test_dashboard_helpers.py  test_db.py  test_ledger.py  test_ledger_backend.py  test_sdk.py  test_security.py  test_verifier.py
